[gd_scene load_steps=4 format=2]

[ext_resource path="res://forms/login_menu/Login.gd" type="Script" id=1]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 2 )

[node name="Login" type="VBoxContainer"]
margin_left = 2.3916
margin_right = 1298.39
margin_bottom = 606.0
custom_constants/separation = 150
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1295.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Asteroids"
align = 1

[node name="FormContainer" type="VBoxContainer" parent="."]
margin_left = 397.0
margin_top = 306.0
margin_right = 897.0
margin_bottom = 638.0
rect_min_size = Vector2( 500, 300 )
size_flags_horizontal = 4
size_flags_vertical = 5
custom_constants/separation = 20

[node name="Host" type="LineEdit" parent="FormContainer"]
margin_right = 500.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"
clear_button_enabled = true
placeholder_text = "Host"
caret_blink = true

[node name="Port" type="SpinBox" parent="FormContainer"]
margin_top = 72.0
margin_right = 500.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 65536.0
value = 35000.0

[node name="Nickname" type="LineEdit" parent="FormContainer"]
margin_top = 144.0
margin_right = 500.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_length = 10
clear_button_enabled = true
placeholder_text = "Nickname"
caret_blink = true

[node name="LoginButton" type="Button" parent="FormContainer"]
margin_top = 216.0
margin_right = 500.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"

[node name="Quit" type="Button" parent="FormContainer"]
margin_top = 284.0
margin_right = 500.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
[connection signal="pressed" from="FormContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="FormContainer/Quit" to="." method="_on_Quit_pressed"]
